src/test/deca/context/valid/test6_use_var.deca
// Description:
//    Programme testant si les variables déclarées sont accessibles & si l'assignement marche.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//	  
//
// Historique:
//    cree le 09/01/2020

{
	// declarations simples 1
	int b1, b2;
	boolean c1, c2;
	float d;
	
	c1 = true;
	c2 = c1;

	b2 = b1;
	d = 0;
	d = b2;
}