src/test/deca/context/invalid/test14_undefined.deca
// Description:
//    Programme testant une variable indefinie.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//	  test_context : erreur ligne 17 : L'identificateur 
//    d'expression j n'est pas déclaré dans la portée
//
// Historique:
//    cree le 09/01/2020

{
	int i;
	j = i;
}